# chartplotterhat_utils

./: Cargo.toml  LICENSE-MIT  README.md  shutdown_monitor.service
eeprom/: chart-plotter-hat-overlay.dts  chart-plotter-hat.dtbo  chart-plotter-hat.txt  eeprom.eep  eeprom_settings.txt
src/: lib.rs
src/shutdown_monitor/: main.rs
src/spitool/: main.rs
